maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:18: error: '(' expected but identifier found.
    if estFaceMur(){
       ^Escaper:26: error: illegal start of simple expression
  }
  ^